# swayify

./: CMakeLists.txt  README.md
src/: swayify.c
